
XBT:
 - xbt_assert is not disabled anymore, even when built with enable_debug=off.

Documentation:
 - New tutorial: Model-checking and formal assessment

Fixed bugs (FG#.. -> FramaGit bugs; FG!.. -> FG merge requests)
 (FG: issues on Framagit; GF: issues on GForge; GH: issues on GitHub)
 - FG#47: Complete and fix tests from teshuite/s4u/activity-lifecycle

----------------------------------------------------------------------------

SimGrid (3.27) March 29. 2021

The Ragnar Release (anniversary of the siege of Paris by Vikings in 845)

Main user-visible changes:
 - All functions marked as deprecated for one year were removed.
 - Removed all that was related to the "Storage" type in all APIs and bindings.
   "Disks" have been introduced more than a year ago to replace them for the better.
   It's time to finish this replacement.
 - SMPI ABI breaks from previous version: MPI global handles (predefined datatypes,
   ops, COMM_WORLD) are now defined differently, and can be used in initializers,
   avoiding "initializer element is not constant" errors with some codes. Please be
   careful to recompile your MPI codes if switching to this new SimGrid version.
 - Network model ns-3 now requires version ns-3.28 or higher.
 - Removed some option aliases that were deprecated since v3.23 (June 2019)
   - 'verbose-exit' is now 'debug/verbose-exit'
   - 'simix/breakpoint' is now 'debug/breakpoint'
   - 'clean-atexit' is now 'debug/clean-atexit'

S4U:
 - New functions: Comm::sendto_{init,async} to initiate a communication
   on between two (possibly remote) hosts.
 - Define new template functions Mailbox::get_unique(), returning a std::unique_ptr.
 - Functions Mailbox::get() and Mailbox::get_async() are now templated with the
   type of the pointee. Untyped functions are deprecated. Use Mailbox::get<void>()
   or Mailbox::get_async<void>() if you really want to play with void*.
 - Unify the interface of Activity::on_{start/activity}
 - New function: Comm::get_dst_data()